--- a/front-end/cmd/web/templates/test.page.gohtml
+++ b/front-end/cmd/web/templates/test.page.gohtml
@@ -7,6 +7,8 @@
                 <h1 class="mt-5 text-center">Go Microservice Workloads</h1>
                 <hr>
                 <a id="brokerBtn" class="btn btn-outline-primary" href="javascript:void(0);">TEST BROKER SERVICE</a>
+                <a id="authBrokerBtn" class="btn btn-outline-primary" href="javascript:void(0);">TEST AUTHENTICATION SERVICE</a>
+
 
                 <div id="output" class="mt-5" style="outline: 1px solid grey; padding: 2em;">
                     <span class="text-muted">DATA OUTPUT</span>
@@ -33,6 +35,7 @@
 {{define "js"}}
     <script>
     let brokerBtn = document.getElementById("brokerBtn");
+    let authBrokerBtn = document.getElementById("authBrokerBtn");
     let output = document.getElementById("output");
     let sent = document.getElementById("payload");
     let received = document.getElementById("received");
@@ -53,6 +56,43 @@
             
             } else {
                 output.innerHTML += `<br><strong>RESPONSE FROM BROKER SERVICE</strong>: ${data.message}`;
+            
+            }
+        })
+        .catch((error) => {
+            output.innerHTML += "<br><br>ERROR: " + error;
+        })
+    })
+
+    authBrokerBtn.addEventListener("click", function() {
+
+        const payload = {
+            action: "auth",
+            auth: {
+                email: "admin@example.com",
+                password: "verysecret",
+            } 
+        }
+
+        const headers = new Headers();
+        headers.append("Content-Type", "application/json");
+
+        const body = {
+            method: 'POST',
+            body: JSON.stringify(payload),
+            headers: headers
+        }
+
+        fetch("http:\/\/localhost:8080/handle", body)
+        .then((response) => response.json())
+        .then((data) => {
+            sent.innerHTML = JSON.stringify(payload, undefined, 4);
+            received.innerHTML = JSON.stringify(data, undefined, 4);
+            if (data.error) {
+                output.innerHTML += `<br><strong>Error:</strong> ${data.message}`;
+            
+            } else {
+                output.innerHTML += `<br><strong>RESPONSE FROM AUTHENTICATION SERVICE</strong>: ${data.message}`;
             
             }
         })
