--- a/front-end/cmd/web/templates/test.page.gohtml
+++ b/front-end/cmd/web/templates/test.page.gohtml
@@ -8,6 +8,9 @@
                 <hr>
                 <a id="brokerBtn" class="btn btn-outline-primary" href="javascript:void(0);">TEST BROKER SERVICE</a>
                 <a id="authBrokerBtn" class="btn btn-outline-primary" href="javascript:void(0);">TEST AUTHENTICATION SERVICE</a>
+                <a id="logBtn" class="btn btn-outline-primary" href="javascript:void(0);">TEST LOGGING SERVICE</a>
+                <a id="mailBtn" class="btn btn-outline-primary" href="javascript:void(0);">TEST MAIL SERVICE</a>
+                <a id="logGBtn" class="btn btn-outline-primary" href="javascript:void(0);">TEST gRPC LOGGING SERVICE</a>
 
 
                 <div id="output" class="mt-5" style="outline: 1px solid grey; padding: 2em;">
@@ -36,9 +39,52 @@
     <script>
     let brokerBtn = document.getElementById("brokerBtn");
     let authBrokerBtn = document.getElementById("authBrokerBtn");
+    let logBtn = document.getElementById("logBtn");
+    let mailBtn = document.getElementById("mailBtn");
+    let logGBtn = document.getElementById("logGBtn");
+
     let output = document.getElementById("output");
     let sent = document.getElementById("payload");
     let received = document.getElementById("received");
+
+    mailBtn.addEventListener("click", function() {
+
+        const payload = {
+            action: "mail",
+            mail: {
+                from: "me@example.com",
+                to: "you@example.com",
+                subject: "go mail-service test email",
+                message: "Hello, World!",
+            } 
+        }
+
+        const headers = new Headers();
+        headers.append("Content-Type", "application/json");
+
+        const body = {
+            method: 'POST',
+            body: JSON.stringify(payload),
+            headers: headers
+        }
+
+        fetch({{print .BrokerURL "/handle"}}, body)
+        .then((response) => response.json())
+        .then((data) => {
+            sent.innerHTML = JSON.stringify(payload, undefined, 4);
+            received.innerHTML = JSON.stringify(data, undefined, 4);
+            if (data.error) {
+                output.innerHTML += `<br><strong>Error:</strong> ${data.message}`;
+            
+            } else {
+                output.innerHTML += `<br><strong>RESPONSE FROM MAIL SERVICE</strong>: ${data.message}`;
+            
+            }
+        })
+        .catch((error) => {
+            output.innerHTML += "<br><br>ERROR: " + error;
+        })
+    })
 
     brokerBtn.addEventListener("click", function() {
 
@@ -46,7 +92,7 @@
             method: 'POST', 
         }
 
-        fetch("http:\/\/localhost:8080", body)
+        fetch({{print .BrokerURL}}, body)
         .then((response) => response.json())
         .then((data) => {
             sent.innerHTML = "EMPTY POST REQUEST";
@@ -83,7 +129,7 @@
             headers: headers
         }
 
-        fetch("http:\/\/localhost:8080/handle", body)
+        fetch({{print .BrokerURL "/handle"}}, body)
         .then((response) => response.json())
         .then((data) => {
             sent.innerHTML = JSON.stringify(payload, undefined, 4);
@@ -93,6 +139,76 @@
             
             } else {
                 output.innerHTML += `<br><strong>RESPONSE FROM AUTHENTICATION SERVICE</strong>: ${data.message}`;
+            
+            }
+        })
+        .catch((error) => {
+            output.innerHTML += "<br><br>ERROR: " + error;
+        })
+    })
+
+    logBtn.addEventListener("click", function() {
+        const payload = {
+            action: "log",
+            log: {
+                name: "log-event",
+                data: "log-event-data",
+            }
+        }
+        const headers = new Headers();
+        headers.append("Content-Type", "application/json");
+
+        const body = {
+            method: "POST",
+            body: JSON.stringify(payload),
+            headers: headers,
+        }
+
+        fetch({{print .BrokerURL "/handle"}}, body)
+        .then((response) => response.json())
+        .then((data) => {
+            sent.innerHTML = JSON.stringify(payload, undefined, 4);
+            received.innerHTML = JSON.stringify(data, undefined, 4);
+            if (data.error) {
+                output.innerHTML += `<br><strong>Error:</strong> ${data.message}`;
+            
+            } else {
+                output.innerHTML += `<br><strong>RESPONSE FROM LOGGING SERVICE</strong>: ${data.message}`;
+            
+            }
+        })
+        .catch((error) => {
+            output.innerHTML += "<br><br>ERROR: " + error;
+        })
+    })
+
+    logGBtn.addEventListener("click", function() {
+        const payload = {
+            action: "log",
+            log: {
+                name: "log-event",
+                data: "log-gRPC-event-data",
+            }
+        }
+        const headers = new Headers();
+        headers.append("Content-Type", "application/json");
+
+        const body = {
+            method: "POST",
+            body: JSON.stringify(payload),
+            headers: headers,
+        }
+
+        fetch({{print .BrokerURL "/log-grpc"}}, body)
+        .then((response) => response.json())
+        .then((data) => {
+            sent.innerHTML = JSON.stringify(payload, undefined, 4);
+            received.innerHTML = JSON.stringify(data, undefined, 4);
+            if (data.error) {
+                output.innerHTML += `<br><strong>Error:</strong> ${data.message}`;
+            
+            } else {
+                output.innerHTML += `<br><strong>RESPONSE FROM gRPC LOGGING SERVICE</strong>: ${data.message}`;
             
             }
         })
